--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hhtd.conversordesistemas">
+    package="com.proyectomovil.conversordesistemas">
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,14 +8,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main">
+        <activity android:name="com.proyectomovil.conversordesistemas.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Conversor"></activity>
+        <activity android:name="com.proyectomovil.conversordesistemas.Conversor"></activity>
     </application>
 
 </manifest>
